# easy-thumbnails

./: .gitignore  .project  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES.rst  LICENSE  MANIFEST.in  README  README.rst  TESTING.rst  TODO  authors.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  python.yml
demoproject/: manage.py
demoproject/demoproject/: asgi.py  settings.py  urls.py  wsgi.py
demoproject/mainapp/: apps.py  forms.py  models.py  urls.py  views.py
docs/: conf.py  index.rst  index.txt  install.rst  install.txt  usage.rst  usage.txt
docs/ref/: animated_formats.rst  files.rst  optimize.rst  pregeneration.txt  processors.rst  processors.txt  settings.rst  settings.txt  source_generators.txt  svg.rst  webp.rst
easy_thumbnails/: __init__.py  alias.py  apps.py  compat.py  conf.py  defaults.py  engine.py  exceptions.py  fields.py  files.py  files_mask.py  get_version.py  luke.py  models.py  namers.py  options.py  pregeneration.py  processors.py  signal_handlers.py  signals.py  source_generators.py  storage.py  test.py  test_settings.py  utils.py  version_utils.py  widgets.py
easy_thumbnails/VIL/: Image.py  ImageChops.py  ImageDraw.py  __init__.py
easy_thumbnails/management/: __init__.py
easy_thumbnails/migrations/: 0001_initial.py  0002_filename_indexes.py  0002_thumbnaildimensions.py  0003_alter_name_max_length_to_1023.py  0003_auto_20210822_0924.py  0003_auto__add_storagenew.py  0005_storage_fks_null.py  0006_auto__chg_field_source_storage_new__chg_field_source_storage__chg_fiel.py  0006_copy_storage.py  (+10 more)
south_migrations/: 0003_auto__add_storagenew.py  0004_auto__add_field_source_storage_new__add_field_thumbnail_storage_new.py  0007_storagenew_fks_not_null.py  0009_auto__del_storage.py  0010_rename_storage.py  0013_auto__del_storage__del_field_source_storage__del_field_thumbnail_stora.py
(+50 files in other folders)
